客户端负载均衡

--- a/eureka-service-provider/src/main/resources/application.yml
+++ b/eureka-service-provider/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka-service-provider
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
