--- a/eureka-service-invoker/src/main/resources/application.yml
+++ b/eureka-service-invoker/src/main/resources/application.yml
@@ -4,13 +4,22 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka-service-provider
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 
 
+eureka-service-provider:
+
+  ribbon:
+
+    listOfServers: http://localhost:9000,http://localhost:9001 # 为消费者提供服务列表
+
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RoundRobinRule
+
+
 server:
-  port: 9001
+  port: 9002
   servlet:
     context-path: /invoker
