--- a/eureka-service-invoker/pom.xml
+++ b/eureka-service-invoker/pom.xml
@@ -56,6 +56,12 @@
 			<version>2.2.4</version>
 		</dependency>
 
+		<!--feign依赖 配置-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
